# PostDyn

./: .gitignore  .ignore  README.md  main.py  pyproject.toml
datasets/: .gitkeep
docs/: activation_methodology.md  concept_analysis.md  concept_dynamics_experiment.md  design.md  experiment_setup.md  humaneval_x_validation.md  methodology.md  requirements.md
experiments/: analyze_gender_surface_control.py  download_datasets.py  plot_concept_dynamics.py  prepare_math_pairs.py  run_concept_dynamics.py  run_concept_dynamics.sh  run_experiments.sh  run_flores_pipeline.py  validate_humaneval_x.py
experiments/artifacts/: humaneval-x-validation.jsonl
results/: activation_cross_model.json  activation_fixed_ratio_hypothesis.json  activation_post_training.json  activation_training_dynamics_pythia-160m.json  activation_training_dynamics_pythia-70m.json
results/concept_dynamics/: extraction_results.json
results/concept_dynamics/gram/: gram.json
src/: __init__.py  activation_analysis.py  analysis.py  concept_analysis.py  concept_dynamics.py  concept_steering.py  config.py  contrastive_datasets.py  dataset_store.py  effective_rank.py  gender_surface_analysis.py  humaneval_x_validator.py  math_pairs.py  visualization.py
tests/: test_activation_analysis.py  test_concept_analysis.py  test_concept_dynamics.py  test_concept_steering.py  test_contrastive_datasets.py  test_effective_rank.py  test_experiment_config.py  test_gender_surface_analysis.py  test_gender_surface_cli.py  test_humaneval_x_validator.py  test_math_pairs.py
(+711 files in other folders)
