[project]
name = "postdyn"
version = "0.1.0"
description = "Post-training dynamics analysis for open-source LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.57.0",
    "numpy>=2.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "safetensors>=0.4.0",
    "accelerate>=1.0.0",
    "scipy>=1.14.0",
    "datasets>=4.8.5",
    "jupyter>=1.1.1",
    "math-verify[antlr4-13-2]==0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
